--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -75,7 +75,7 @@ const trendingTools = trendingIds
         <ToolSearch
           placeholder="Search for tools... (e.g., JSON formatter, Base64 encoder)"
           size="large"
-          client:load
+          client:visible
         />
       </div>
 
